[gd_scene load_steps=7 format=2]

[ext_resource path="res://Themes/ornate-theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Sprites/WindCompassNeedle.png" type="Texture" id=4]
[ext_resource path="res://Sprites/WindCompassBase.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Map.tscn" type="PackedScene" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Map" parent="." instance=ExtResource( 6 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
z_index = 3

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
margin_left = 477.0
margin_top = 269.0
margin_right = 517.0
margin_bottom = 309.0
theme = ExtResource( 1 )

[node name="WindCompass" type="Sprite" parent="UILayer/UI"]
position = Vector2( 373, 163 )
texture = ExtResource( 5 )

[node name="Needle" type="Sprite" parent="UILayer/UI/WindCompass"]
texture = ExtResource( 4 )

[node name="SpeedLabel" type="Label" parent="UILayer/UI"]
margin_left = -472.0
margin_top = 180.0
margin_right = -220.0
margin_bottom = 266.0
text = "Current Speed: "

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="MapCamera" type="Camera2D" parent="."]
zoom = Vector2( 40, 40 )

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]

[editable path="Player"]
